fix: adjust spacing to match with the parent element #36

--- a/packages/lumina-core/src/components/tabs/treeBranch/styles.scss
+++ b/packages/lumina-core/src/components/tabs/treeBranch/styles.scss
@@ -35,7 +35,7 @@
 
   & .branch_children {
     flex-basis: 100%;
-    padding-left: 35px;
+    padding-left: var(--lum-size-icon-xl);
   }
 
   &__filter {
